force-app/main/default/objects/Contract_Discrepancy__c/Contract_Discrepancy__c.object-meta.xml
<CustomObject>
    <label>Contract Discrepancy</label>
    <nameField>
        <displayFormat>CD-{00000}</displayFormat>
        <label>Contract Discrepancy Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Discrepancies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>