force-app/main/default/objects/Contract_Discrepancy__c/fields/Contract_Evidence__c.field-meta.xml
<CustomField>
    <fullName>Contract_Evidence__c</fullName>
    <label>Contract Evidence</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>