force-app/main/default/objects/Contract_Discrepancy__c/fields/Contract_Review__c.field-meta.xml
<CustomField>
    <fullName>Contract_Review__c</fullName>
    <label>Contract Review</label>
    <referenceTo>Contract_Review__c</referenceTo>
    <relationshipLabel>Contract Discrepancies</relationshipLabel>
    <relationshipName>Contract_Discrepancies</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>