force-app/main/default/objects/Contract_Discrepancy__c/fields/Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>Contract_Value__c</fullName>
    <label>Contract Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>