force-app/main/default/objects/Contract_Discrepancy__c/fields/Document_Value__c.field-meta.xml
<CustomField>
    <fullName>Document_Value__c</fullName>
    <label>Document Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>