force-app/main/default/objects/Contract_Discrepancy__c/fields/Salesforce_Source__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Source__c</fullName>
    <label>Salesforce Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>