force-app/main/default/objects/Contract_Discrepancy__c/fields/Salesforce_Value__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Value__c</fullName>
    <label>Salesforce Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>