force-app/main/default/objects/Contract_Discrepancy__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HIGH</fullName>
            </value>
            <value>
                <fullName>MEDIUM</fullName>
            </value>
            <value>
                <fullName>LOW</fullName>
            </value>
            <value>
                <fullName>NONE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>