force-app/main/default/objects/Contract_Discrepancy__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MISMATCH</fullName>
            </value>
            <value>
                <fullName>UNKNOWN</fullName>
            </value>
            <value>
                <fullName>AMBIGUOUS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>